# DDalphaAMG-SM

./: .gitignore  2D_U1_Ns128_Nt128_b20000_m-01884_0.ctxt  2D_U1_Ns256_Nt256_b20000_m-01884_0.ctxt  2D_U1_Ns64_Nt64_b20000_m-01884_0.ctxt  2D_U1_Ns8_Nt8_b20000_m-01884_0.ctxt  CMakeLists.txt  README.md  inputs  junk  parameters  run_test.sh
include/: amg.h  boundary.h  config.h  config.h.in  conjugate_gradient.h  dirac_operator.h  fgmres.h  gather_scatter.h  halo_exchange.h  io.h  level.h  methods.h  mpi_setup.h  params.h  sap.h  tests.h  utils.h  variables.h
junk/: junk_functions
src/: amg.cpp  conjugate_gradient.cpp  dirac_operator.cpp  fgmres.cpp  halo_exchange.cpp  io.cpp  level.cpp  main.cpp  methods.cpp  sap.cpp  tests.cpp  utils.cpp  variables.cpp
